qlcplus (4.11.3) stable; urgency=low

  * Fixture Editor: reworked to define more accurate information (see documentation)
  * New fixtures: American DJ Auto Spot 150, Boom Box Fx2, Revo Sweep (thanks to Felix Edelmann)
  * New fixtures: JB-Lighting Varyscan P7, Showtec Dominator, Showtec Sunraise LED (thanks to Felix Edelmann)
  * New fixture: Orion Effects Lighting ORCAN2 (thanks to Felix Edelmann)
  * New fixtures: American DJ Revo Burst, Ayra TDC Triple Burst, Chauvet GigBAR 2 (thanks to Flo Edelmann)
  * New fixture: Venue TriStrip3Z (thanks to Flo Edelmann)
  * New fixture: Stairville Crown FX PAR77 (thanks to Andres Robles)

 -- Massimo Callegari <massimocallegari@yahoo.it>  Sun, 21 Oct 2018 12:13:14 +0200

qlcplus (4.11.2) stable; urgency=low

  * engine: fix crash caused by an invalid IO mapping
  * engine: fix intensity override not considered during fade outs
  * UI/Function Manager: fixed keyboard shortcut conflicts and document them
  * UI/Function Manager: allow to import multiple of audio/video files at once
  * UI/Channel Groups: added expand/collapse all button helpers
  * UI/Chaser Editor: add a button to shuffle the selected Chaser steps (thanks to Felix Edelmann)
  * UI/RGBMatrix Editor: fix preview not updating on pattern change when play button is on
  * Show Manager: fix crash when adding a Sequence after deleting one
  * Show Manager: fix crash when editing a Sequence bound to a deleted Scene
  * Show Manager: fix items start time indication when dragging
  * Virtual Console/Slider: fix submaster initial value not applied and inverted mode
  * Virtual Console/Slider: added 'value catching' option for external controller faders (Lukas Jähn proposal)
  * Virtual Console/Slider: fix values range when switching between Slider and Knob appearance
  * Virtual Console/Slider: react on Scene flashing when in playback mode
  * Virtual Console/Knob: fix DMX values not updated when interacting with the mouse wheel