@@ -107,6 +107,8 @@ SceneEditor::SceneEditor(QWidget* parent, Scene* scene, Doc* doc, bool applyValu
     if (showDial.isNull() == false && showDial.toBool() == true)
         m_speedDialAction->setChecked(true);
 
+    connect(m_doc, SIGNAL(fixtureRemoved(quint32)), this, SLOT(slotFixtureRemoved(quint32)));
+
     m_initFinished = true;
 
     // Set focus to the editor if newly created
@@ -160,6 +162,22 @@ void SceneEditor::slotSetSceneValues(QList <SceneValue>&sceneValues)
         if (fc != NULL)
             fc->setSceneValue(sv);
     }
+}
+
+void SceneEditor::slotFixtureRemoved(quint32 id)
+{
+    removeFixtureTab(id);
+    removeFixtureItem(id);
+
+    QListIterator <SceneValue> it(m_scene->values());
+
+    while (it.hasNext() == true)
+    {
+        SceneValue sv(it.next());
+        if (sv.fxi == id)
+            m_scene->unsetValue(id, sv.channel);
+    }
+    m_scene->removeFixture(id);
 }
 
 void SceneEditor::init(bool applyValues)
@@ -1232,13 +1250,11 @@ bool SceneEditor::addFixtureItem(Fixture* fixture)
     return true;
 }
 
-void SceneEditor::removeFixtureItem(Fixture* fixture)
+void SceneEditor::removeFixtureItem(quint32 fixtureID)
 {
-    QTreeWidgetItem* item;
+    QTreeWidgetItem *item;
 
-    Q_ASSERT(fixture != NULL);
-
-    item = fixtureItem(fixture->id());
+    item = fixtureItem(fixtureID);
     delete item;
 }
 
@@ -1299,8 +1315,8 @@ void SceneEditor::slotRemoveFixtureClicked()
             Fixture* fixture = it.next();
             Q_ASSERT(fixture != NULL);
 
-            removeFixtureTab(fixture);
-            removeFixtureItem(fixture);
+            removeFixtureTab(fixture->id());
+            removeFixtureItem(fixture->id());
 
             /* Remove all values associated to the fixture */
             for (quint32 i = 0; i < fixture->channels(); i++)
@@ -1527,15 +1543,13 @@ void SceneEditor::addFixtureTab(Fixture* fixture, quint32 channel)
         console->setChecked(true, channel);
 }
 
-void SceneEditor::removeFixtureTab(Fixture* fixture)
+void SceneEditor::removeFixtureTab(quint32 fixtureID)
 {
-    Q_ASSERT(fixture != NULL);
-
     /* Start searching from the first fixture tab */
     for (int i = m_fixtureFirstTabIndex; i < m_tab->count(); i++)
     {
         FixtureConsole* fc = fixtureConsoleTab(i);
-        if (fc != NULL && fc->fixture() == fixture->id())
+        if (fc != NULL && fc->fixture() == fixtureID)
         {
             /* First remove the tab because otherwise Qt might
                remove two tabs -- undocumented feature, which
@@ -1543,7 +1557,7 @@ void SceneEditor::removeFixtureTab(Fixture* fixture)
             QScrollArea* area = qobject_cast<QScrollArea*> (m_tab->widget(i));
             Q_ASSERT(area != NULL);
             m_tab->removeTab(i);
-            m_consoleList.take(fixture->id());
+            m_consoleList.take(fixtureID);
             delete area; // Deletes also FixtureConsole
             break;
         }
